kubernetes/rucio/int-statsd-exporter.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: statsd-exporter
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: statsd-exporter
    spec:
      containers:
      - name: statsd-exporter
        image: prom/statsd-exporter
        imagePullPolicy: Always
        ports:
        - name: export
          containerPort: 9102
        - name: import
          containerPort: 9125
          protocol: UDP
        volumeMounts:
        - name: statsd-configmap
          subPath: statsd_mapping.yaml
          mountPath: /tmp/statsd_mapping.yaml
        args: [
          "--statsd.mapping-config=/tmp/statsd_mapping.yaml"
        ]
      volumes:
      - name: statsd-configmap
        configMap:
          name: statsd-exporter-configmap
---
apiVersion: v1
kind: Service
metadata:
  name: statsd-exporter-svc
  labels:
    app: statsd-exporter
spec:
  ports:
  - name: import
    port: 8125 #port to push metrics to
    protocol: UDP
    targetPort: import
  - name: export
    port: 9102 #port to fetch metrics from
    protocol: TCP
    targetPort: export
  selector:
    app: statsd-exporter
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: statsd-exporter
  labels:
    app.kubernetes.io/name: statsd-exporter
    app.kubernetes.io/instance: statsd-exporter
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/frontend-entry-points: http

spec:
  rules:
    - host: cms-rucio-stats-int.cern.ch
      http:
        paths:
          - path: /
            backend:
              serviceName: statsd-exporter-svc
              servicePort: export
